[package]
name = "hanafuda-grid"
version = "0.1.0"
authors = ["Shane Knudsen <shaneknu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hanafuda_deck_rs = { git = "https://github.com/circleofconfusion/hanafuda-deck-rs" }