[package]
name = "hanafuda-grid"
version = "0.1.0"
authors = ["Shane Knudsen <shaneknu@gmail.com>"]
edition = "2018"

[dependencies]
hanafuda_deck_rs = { git = "https://github.com/circleofconfusion/hanafuda-deck-rs" }
png = "0.16.7"
gtk = "0.9.2"
glib = "0.10.2"
gio = "0.9.1"
gdk = "0.13.2"
cairo-rs = { version = "0.9.1", features = ["png"] }